--- a/config.toml
+++ b/config.toml
@@ -78,6 +78,10 @@ googleAnalytics = "UA-PROPERTY_ID"
   url = '/articles/index.xml'
   weight = 6
 
+[[redirects]]
+	from = "/*"
+	to = "/404/"
+	status = 404
 
 # syntax highlight settings
 [markup]
@@ -86,3 +90,4 @@ googleAnalytics = "UA-PROPERTY_ID"
   [markup.goldmark.renderer]
     # Enable to include inline HTML
     unsafe = true
+
