--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://agrogur.github.io'
+baseURL = 'https://agrogur.github.io'
 languageCode = 'en-us'
 title = 'Uğur Gümüş'
 theme = ['hugo-cloak-email', 'digitalgarden']
