--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,7 @@ googleAnalytics = "UA-PROPERTY_ID"
   weight = 8
 [[menu.main]]
   name = 'Blog'
-  url = '/blog'
+  url = 'https://ugurgumus.me/blog/'
   weight = 9
 
 [[menu.social]]
